added bonus part on banner section

--- a/index.html
+++ b/index.html
@@ -156,6 +156,32 @@
                     </div>
                 </div>
             </div>
+                <div class="hidden lg:grid grid-cols-5 text-center bg-white lg:mx-40 rounded-lg py-5 gap-6 relative bottom-20">
+                
+                    <div class="flex flex-col items-center text-black">
+                        <img src="./images/fruit1.png" alt="">
+                    <p>Blueberry</p>
+                    </div>
+                <div class="flex flex-col items-center text-black">
+                    <div><img src="./images/fruit2.png" alt="">
+                        <p> Orange</p></div>
+                </div>
+                <div class="flex flex-col items-center text-black">
+                    <div><img src="./images/fruit3.png" alt="">
+                        <p> Mango</p></div>
+                </div>
+                <div class="flex flex-col items-center text-black">
+                   <div>
+                    <img src="./images/fruit4.png" alt="">
+                    <p> Strawberry</p>
+                   </div>
+                </div>
+                <div class="flex flex-col items-center text-black">
+                    <div><img src="./images/fruit5.png" alt="">
+                        <p>Pomegranate</p></div>
+                </div>
+                
+            </div>
         </section>
     </header>
     <main>
