--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
 </head>
 
-<body class="font-lato">
+<body class="font-lato bg-white">
     <header>
         <!-- navbar start from here -->
         <nav class="lg:px-40">
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-                <div class="hidden lg:grid grid-cols-5 text-center bg-white lg:mx-40 rounded-lg py-5 gap-6 relative bottom-20">
+                <div class="hidden lg:grid grid-cols-5 text-center bg-white lg:mx-40 rounded-lg py-5 gap-6 relative bottom-20 shadow-md">
                 
                     <div class="flex flex-col items-center text-black">
                         <img src="./images/fruit1.png" alt="">
@@ -185,7 +185,43 @@
         </section>
     </header>
     <main>
-
+<!-- deal of the day section -->
+<section class="text-black lg:px-40">
+    <div class="flex">
+        <div class="">
+            <h2 class="text-5xl font-extrabold">Deal of the day</h2>
+            <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div>
+            <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:24;"></span>
+                  </span>
+                  days
+                </div> 
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:00;"></span>
+                  </span>
+                  hours
+                </div> 
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:00;"></span>
+                  </span>
+                  min
+                </div> 
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:00;"></span>
+                  </span>
+                  sec
+                </div>
+              </div>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
 
