fixed few codes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
 </head>
 
-<body class="font-lato bg-white">
+<body class="font-lato">
     <header>
         <!-- navbar start from here -->
         <nav class="lg:px-40">
@@ -99,7 +99,7 @@
                                 Exotic tastes at your <br>doorstep
                             </h1>
                             <p class="text-xl font-medium">We supply highly quality organic products</p>
-                            <button class="btn bg-primary text-white">Shop Now</button>
+                            <button class="btn border-0 bg-primary text-white">Shop Now</button>
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -115,7 +115,7 @@
                             Exotic tastes at your <br>doorstep
                         </h1>
                         <p class="text-xl font-medium">We supply highly quality organic products</p>
-                        <button class="btn bg-primary text-white">Shop Now</button>
+                        <button class="btn border-0 bg-primary text-white">Shop Now</button>
                     </div>
                 </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -131,7 +131,7 @@
                             Exotic tastes at your <br>doorstep
                         </h1>
                         <p class="text-xl font-medium">We supply highly quality organic products</p>
-                        <button class="btn bg-primary text-white">Shop Now</button>
+                        <button class="btn border-0 bg-primary text-white">Shop Now</button>
                     </div>
                 </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -147,7 +147,7 @@
                                 Exotic tastes at your <br>doorstep
                             </h1>
                             <p class="text-xl font-medium">We supply highly quality organic products</p>
-                            <button class="btn bg-primary text-white">Shop Now</button>
+                            <button class="btn border-0 bg-primary text-white">Shop Now</button>
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -187,34 +187,34 @@
     <main>
 <!-- deal of the day section -->
 <section class="text-black lg:px-40">
-    <div class="flex">
-        <div class="">
+    <div class="flex justify-between items-center">
+        <div class=" space-y-4">
             <h2 class="text-5xl font-extrabold">Deal of the day</h2>
-            <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br>Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
         <div>
-            <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
-                <div class="flex flex-col">
-                  <span class="countdown font-mono text-5xl">
-                    <span style="--value:24;"></span>
+            <div class="flex gap-5 text-4xl">
+                <div>
+                  <span class="countdown font-mono text-4xl">
+                    <span style="--value:15;"></span>
                   </span>
                   days
                 </div> 
-                <div class="flex flex-col">
-                  <span class="countdown font-mono text-5xl">
-                    <span style="--value:00;"></span>
+                <div>
+                  <span class="countdown font-mono text-4xl">:
+                    <span style="--value:10;"></span>
                   </span>
                   hours
                 </div> 
-                <div class="flex flex-col">
-                  <span class="countdown font-mono text-5xl">
-                    <span style="--value:00;"></span>
+                <div>
+                  <span class="countdown font-mono text-4xl">:
+                    <span style="--value:24;"></span>
                   </span>
                   min
                 </div> 
-                <div class="flex flex-col">
-                  <span class="countdown font-mono text-5xl">
-                    <span style="--value:00;"></span>
+                <div>
+                  <span class="countdown font-mono text-4xl">:
+                    <span style="--value:14;"></span>
                   </span>
                   sec
                 </div>
