--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <main class="bg-white">
         <!-- deal of the day section -->
         <section class="text-black lg:px-40 space-y-6 lg:mt-5">
-            <div class="flex flex-col lg:flex-row justify-between items-center">
+            <div class="flex flex-col lg:flex-row justify-between items-center p-4 lg:p-0">
                 <div class=" space-y-4">
-                    <h2 class="text-5xl font-extrabold">Deal of the day</h2>
+                    <h2 class="text-5xl font-extrabold text-center lg:text-left">Deal of the day</h2>
                     <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical
                         <br>Latin literature from 45 BC, making it over 2000 years old.</p>
                 </div>
@@ -468,6 +468,7 @@
             </button>
            </div>
         </section>
+
     </main>
     <footer>
 
